fix : dark mode n light mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+@layer components {
+	.dark\:bg-gray-900 {
+		@apply bg-gray-900;
+	}
+	.dark\:text-gray-100 {
+		@apply text-gray-100;
+	}
+}
